--- a/src/App.css
+++ b/src/App.css
@@ -34,12 +34,18 @@ a{
 button{
     cursor:pointer;
 }
- button:active{
+button:active{
     transform: translate(-1px,1px);
     -webkit-transform: translate(-1px,1px);
     -moz-transform: translate(-1px,1px);
     -ms-transform: translate(-1px,1px);
     -o-transform: translate(-1px,1px);
+}
+.loading {
+    text-align:center;
+    margin:1rem;
+    font-size:2rem;
+    color: var(--primary);
 }
 /* ---------NAV--------: */
 .nav__container{
@@ -67,15 +73,22 @@ button{
 }
 .nav__ul{
     list-style-type: none;
-    display: none;
+    display: flex;
     flex-direction: column;
     position: fixed;
     left: 0;
     top: 0;
+    width:0%;
+    overflow:hidden;
     z-index: 100;
     background-color: var(--pureWhite);
     height: 100%;
-    padding: 1rem 0.2rem;
+    padding: 1rem 0;
+    transition: width 0.2s ease-out, box-shadow 0.2s;
+    -webkit-transition: width 0.2s ease-out, box-shadow 0.2s;
+    -moz-transition: width 0.2s ease-out, box-shadow 0.2s;
+    -ms-transition: width 0.2s ease-out, box-shadow 0.2s;
+    -o-transition: width 0.2s ease-out, box-shadow 0.2s;
 }
 .nav__li{
     margin: 0.4rem;
@@ -96,8 +109,9 @@ button{
     display:flex;
     align-items: center;
 }
-.flex{
-    display:flex;
+.display-nav{
+    width: 196px;
+    box-shadow: -10px 0px 20px var(--black);
 }
 .nav__li svg{
     font-size:0.8rem;
@@ -230,7 +244,7 @@ button{
 .productItem__img{
     margin: auto;
     height:300px;
-    width:300px;
+    width:100%;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -238,6 +252,7 @@ button{
 }
 .productItem__img-img{
     width:100%; 
+    display: block;
 }
 .productItem__title{
     color:var(--black);
@@ -305,12 +320,63 @@ button{
     opacity: 0.8;
     outline: none;
 }
+.singleProduct__notice{
+    display:none;
+    position: fixed;
+    top:0;
+    height:100%;
+    background-color: rgba(0,0,0,0.4);
+    left:0;
+    width:100%;
+}
+.singleProduct__notice-container{
+    padding: 2rem;
+    background-color: var(--pureWhite);
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    -webkit-transform:translate(-50%,-50%);
+    -moz-transform:translate(-50%,-50%);
+    -ms-transform:translate(-50%,-50%);
+    -o-transform:translate(-50%,-50%);
+    width: 300px;
+}
+.singleProduct__notice-icon{
+    color: rgb(51, 216, 106);
+    text-align: center;
+    font-size:3rem;
+}
+.singleProduct__notice-links a{
+    margin: 0.5rem;
+}
+.singleProduct__notice-title{
+    margin: 1rem 0;
+    color: var(--black);
+}
+.singleProduct__notice-img img{
+    width:100%;
+}
 /* ---------CART.js-------- */
 .cart__container{
     display:flex;
     flex-direction: column;
     align-items: center;
     padding:2rem;
+}
+.cart-empty{
+    text-align: center;
+    margin: 2rem auto;
+    position: relative;
+    color: var(--primary);
+}
+.cart-empty::before{
+    content:'';
+    width: 150px;
+    height: 3px;
+    position: absolute;
+    background-color: var(--primary);
+    bottom: -20%;
 }
 .cartItem{
     margin: 1rem;
@@ -469,12 +535,19 @@ button{
 /* -------FILTER.js------- */
 .filter{
     display:flex;
+    flex-direction: column;
     justify-content: space-between;
     margin:1rem auto;
     padding:1rem 3rem;
+    align-items: center;
+}
+.filter__title{
+    color: var(--black);
+    margin:1rem;
 }
 .filter__item-type{
-    margin:0 0.5rem;
+    margin:0.5rem;
+    display: block;
 }
 .filter__select{
     border: 1px solid var(--secondary);
@@ -496,10 +569,14 @@ button{
     .nav__ul{
         position:static;
         background-color:transparent;
-        display:flex;
+        width:auto;
         height:auto;
         flex-direction: row;
         justify-content: space-between;
+        padding: 1rem 0.2rem;
+        box-shadow:none;
+        width: auto;
+        overflow: visible;
     }
     .nav__li{
         margin: 0 1rem;
@@ -525,7 +602,7 @@ button{
         -ms-transition: opacity 0.5s;
         -o-transition: opacity 0.5s;
         box-shadow: 5px 5px 20px var(--grey);
-}
+    }
     .nav__li:hover .nav__li-links{
         visibility: visible;
         opacity: 1;
@@ -597,6 +674,10 @@ button{
         -ms-transform: translateX(-100%);
         -o-transform: translateX(-100%);
         margin:0 1rem;
+    }
+    /* -------FILTER------ */
+    .filter{
+        flex-direction: row;
     }
 }
 /* 800px */
