Project Updated: v1.3 - managed logos and readme

--- a/src/App.css
+++ b/src/App.css
@@ -226,8 +226,8 @@ button:active{
     flex-direction: column;
 }
 .productItem{
-    display:block;
-    flex: 0 0 90%;
+    display: block;
+    flex-basis: 90%;
     margin: 1rem;
 }
 .productItem__container{
